[package]
name = "tracon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
adsbx_json = "11"
bzip2 = "0.4"
chrono = "0.4"
geo = "0"
indicatif = { version = "0.16", features = ["rayon"] }
pariter = "0.5"
# pariter = { path = "../pariter"}
rstar = "0.9.3"
structopt = "0.3"
thiserror = "1"
